Пересмотрел процесс разработки. Пишу тесты на lr0